# Categorize-CLI

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Functions.py  PACKAGE.md  README.md  creds.py  extensions.py  intensions.txt  main.py  main.spec  pyproject.toml  requirements.txt  secondary_functions.py  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  tests.yml
Categorize_CLI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: __main__.py  extensions.py  secondary_functions.py
src/Categorize_CLI/: __main__.py  main.py  secondary_functions.py
src/Categorize_CLI/commands/: ext-all.py  ext.py  key-all.py  key.py  safe.py  year.py
src/Categorize_CLI/common/: extensions.py  secondary_functions.py  utils.py
src/Categorize_CLI/services/: ext_functions.py  key_functions.py  year_functions.py
src/commands/: ext-all.py  ext.py  key-all.py
src/common/: secondary_functions.py
src/services/: ext_functions.py  key_functions.py  year_functions.py
tests/: test_command.py
tests/test_ext/: test_ext.py  test_ext_all.py
tests/test_key/: test_key.py
tests/test_year/: test_year.py
