[tool.poetry]
name = "Categorize-CLI"
version = "1.0.0"
description = "Categorize-CLI is a command-line-tool made to help you categorize/organize files in a given directory"
authors = ["Rohith Nambiar <rohithnambiar04@gmail.com>"]
license= "MIT"
readme = "PACKAGE.md"
packages = [{ include = "src/Categorize_CLI" }]
repository = "https://github.com/Rohith-JN/Categorize-CLI"
keywords = [
    "organize", 
    "automation",
    "CLI", 
    "categorize",
    "file management"
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Utilities",
]


[tool.poetry.urls]
Changelog = "https://github.com/Rohith-JN/Categorize-CLI/blob/main/CHANGELOG.md"
Issues ="https://github.com/Rohith-JN/Categorize-CLI/issues"


[tool.poetry.scripts]
Categorize = "src.Categorize_CLI.__main__:main"


[tool.poetry.dependencies]
python = ">=3.7,<4.0"
click = ">= 8.0.0"
colorama = "^0.4.4"
progress = "^1.6"


[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
pypiwin32 = "^223"


[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 88


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
